[package]
name = "frost-uniffi-sdk"
version = "0.0.6"
edition = "2021"


[lib]
crate-type = ["lib","staticlib", "cdylib"]
name = "frost_uniffi_sdk"


[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
reddsa = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# Zcash dependencies
orchard = { git = "https://github.com/pacu/orchard.git", rev = "388195ab04b59fc3496c077b32227f5a90808938", features = ["unstable-frost"] }
zcash_primitives = { path = "/Users/pacu/Repos/Zcash/librustzcash/zcash_primitives" }
zcash_protocol = { path = "/Users/pacu/Repos/Zcash/librustzcash/components/zcash_protocol" }
zcash_keys = { path = "/Users/pacu/Repos/Zcash/librustzcash/zcash_keys", features = ["orchard", "unstable-frost"] }
zip32 = { version = "0.1" }
zcash_address =  { path = "/Users/pacu/Repos/Zcash/librustzcash/components/zcash_address" }

# Other dependencies
bip0039 = "0.11"


[features]
redpallas = []
regtest = []
default = ["redpallas"]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }