[package]
name = "orchard-keys-uniffi"
version = "0.0.0"
edition = "2021"


[lib]
crate-type = ["lib","staticlib", "cdylib"]
name = "orchard_keys_uniffi"


[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }
reddsa = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

orchard = { git = "https://github.com/pacu/orchard.git", rev = "96bda92e3ed689bdc2fda334b0712ec80d08012d", features = ["unstable-frost"] }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "7f7b685b99132505a0fe4ba588f329e3516e9669"}
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "7f7b685b99132505a0fe4ba588f329e3516e9669" }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "7f7b685b99132505a0fe4ba588f329e3516e9669", features = ["orchard"] }
zip32 = { version = "0.1" }
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "7f7b685b99132505a0fe4ba588f329e3516e9669" }
[features]
default = []

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }